kubernetes/main/apps/networking/envoy-gateway/config/internal/gateway.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.18b.haus/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal
  annotations:
    external-dns.kubernetes.io/target: &hostname internal.18b.haus
    gatus.home-operations.com/endpoint: |-
      group: internal
      guarded: true
      interval: 2m
      ui:
        hide-hostname: true
        hide-url: true
      alerts:
        - type: telegram
  labels:
    gateway.18b.haus/traffic-policy: internal
spec:
  gatewayClassName: envoy
  infrastructure:
    annotations:
      external-dns.kubernetes.io/hostname: *hostname
      lbipam.cilium.io/ips: 192.168.40.253
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: internal-config
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: 18b-haus-tls
